Handle accents separately from other case exlcusiosn
See #946.

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -625,6 +625,8 @@
 % \begin{macro}[EXP]{\@@_expand_exclude:nN}
 % \begin{macro}[EXP]{\@@_expand_exclude:NN}
 % \begin{macro}[EXP]{\@@_expand_exclude:Nn}
+% \begin{macro}[EXP]{\@@_expand_accent:N}
+% \begin{macro}[EXP]{\@@_expand_accent:NN}
 % \begin{macro}[EXP]{\@@_expand_letterlike:N}
 % \begin{macro}[EXP]{\@@_expand_letterlike:NN}
 % \begin{macro}[EXP]{\@@_expand_cs:N, \@@_expand_encoding:N}
@@ -858,15 +860,13 @@
   }
 %    \end{macrocode}
 %   Next we exclude math commands: this is mainly as there \emph{might} be an
-%   \cs{ensuremath}. We also handle accents, which are basically the same issue
-%   but are kept separate for semantic reasons.
+%   \cs{ensuremath}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_expand_exclude:N #1
   {
     \exp_args:Ne \@@_expand_exclude:nN
       {
         \exp_not:V \l_text_math_arg_tl
-        \exp_not:V \l_text_accents_tl
         \exp_not:V \l_text_expand_exclude_tl
       }
     #1
@@ -879,7 +879,7 @@
 \cs_new:Npn \@@_expand_exclude:NN #1#2
   {
     \@@_if_recursion_tail_stop_do:Nn #2
-      { \@@_expand_letterlike:N #1 }
+      { \@@_expand_accent:N #1 }
     \str_if_eq:nnTF {#1} {#2}
       {
         \@@_use_i_delimit_by_q_recursion_stop:nw
@@ -891,6 +891,29 @@
   {
     \@@_expand_store:n { #1 {#2} }
     \@@_expand_loop:w
+  }
+%    \end{macrocode}
+%   Accents.
+%    \begin{macrocode}
+\cs_new:Npn \@@_expand_accent:N #1
+  {
+    \exp_after:wN \@@_expand_accent:NN \exp_after:wN
+      #1 \l_text_accents_tl
+      \q_@@_recursion_tail \q_@@_recursion_stop
+  }
+\cs_new:Npn \@@_expand_accent:NN #1#2
+  {
+    \@@_if_recursion_tail_stop_do:Nn #2
+      { \@@_expand_letterlike:N #1 }
+    \cs_if_eq:NNTF #2 #1
+      {
+        \@@_use_i_delimit_by_q_recursion_stop:nw
+          {
+            \@@_expand_store:n {#1}
+            \@@_expand_loop:w
+          }
+      }
+      { \@@_expand_accent:NN #1 }
   }
 %    \end{macrocode}
 %   Another list of exceptions: these ones take no arguments so are
@@ -1057,6 +1080,8 @@
     \@@_expand_loop:w
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
