Move l3opacity to l3experimental

--- a/l3experimental/l3opacity/l3opacity.dtx
+++ b/l3experimental/l3opacity/l3opacity.dtx
@@ -11,7 +11,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3trial bundle" (The Work in LPPL)
+% This file is part of the "l3experimental bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -46,7 +46,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2020-10-27}
+% \date{Released 2021-07-01}
 %
 % \maketitle
 %
@@ -61,17 +61,17 @@
 % (\pdfTeX{}, \LuaTeX{}) or with recent versions of \texttt{(x)dvipdfmx}:
 % these backends do offer the necessary support.
 %
-% \begin{function}{\opacity_select:n}
+% \begin{function}[added = 2021-07-01]{\opacity_select:n}
 %   \begin{syntax}
-%     \cs{\opacity_select:n} \Arg{expression}
+%     \cs{opacity_select:n} \Arg{expression}
 %   \end{syntax}
 %   Evaluates the \meta{expression}, which should yield a value in the range $[0,1]$.
 %   This is then activated as an opacity for both filling and stroking.
 % \end{function}
 %
-% \begin{function}{\opacity_fill:n, \opacity_stroke:n}
+% \begin{function}[added = 2021-07-01]{\opacity_fill:n, \opacity_stroke:n}
 %   \begin{syntax}
-%     \cs{\opacity_fill:n} \Arg{expression}
+%     \cs{opacity_fill:n} \Arg{expression}
 %   \end{syntax}
 %   Evaluates the \meta{expression}, which should yield a value in the range $[0,1]$.
 %   This is then activated as an opacity for filling or stroking, respectively.
@@ -92,7 +92,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3opacity}{2020-10-27}{}
+\ProvidesExplPackage{l3opacity}{2021-07-01}{}
   {L3 Experimental opacity support}
 %    \end{macrocode}
 %
