fix typo [CI skip]

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -297,7 +297,7 @@
 % \end{verbatim}
 % where \verb*|\foobar{arg1} [arg2]| will not find an optional argument.
 %
-% There is one subtly here due to the difference in handling by \TeX{}
+% There is one subtlety here due to the difference in handling by \TeX{}
 % of \enquote{control symbols}, where the command name is made up of a single
 % character, such as \enquote{\cmd{\\}}. Spaces are not ignored by \TeX{}
 % here, and thus it is possible to require an optional argument directly
