--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1169,16 +1169,14 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \str_if_eq:nn #1#2 { p , T , F , TF }
   {
-    \if_int_compare:w
-      \@@_if_eq:nn { \exp_not:n {#1} } { \exp_not:n {#2} }
-      = \c_zero_int
+    \if:w 0 \@@_if_eq:nn { \exp_not:n {#1} } { \exp_not:n {#2} }
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 \prg_generate_conditional_variant:Nnn \str_if_eq:nn
   { V , v , o , nV , no , VV , nv } { p , T , F , TF }
 \prg_new_conditional:Npnn \str_if_eq:ee #1#2 { p , T , F , TF }
   {
-    \if_int_compare:w \@@_if_eq:nn {#1} {#2} = \c_zero_int
+    \if:w 0 \@@_if_eq:nn {#1} {#2}
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 %    \end{macrocode}
@@ -1191,9 +1189,8 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \str_if_eq:NN #1#2 { p , TF , T , F }
   {
-    \if_int_compare:w
-      \@@_if_eq:nn { \tl_to_str:N #1 } { \tl_to_str:N #2 }
-      = \c_zero_int \prg_return_true: \else: \prg_return_false: \fi:
+    \if:w 0 \@@_if_eq:nn { \tl_to_str:N #1 } { \tl_to_str:N #2 }
+      \prg_return_true: \else: \prg_return_false: \fi:
   }
 \prg_generate_conditional_variant:Nnn \str_if_eq:NN
   { c , Nc , cc } { T , F , TF , p }
