document speed gain reasoning

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1163,9 +1163,12 @@
 %     \str_if_eq:ee
 %   }
 %   Modern engines provide a direct way of comparing two token lists,
-%   but returning a number. This set of conditionals therefore make life
-%   a bit clearer. The \texttt{nn} and \texttt{xx} versions are created
-%   directly as this is most efficient.
+%   but returning a number. This set of conditionals therefore makes life
+%   a bit clearer. The \texttt{nn} and \texttt{ee} versions are created
+%   directly as this is most efficient. Since \cs{@@_if_eq:nn} will expand to
+%   |0| as an explicit character with category 12 if the two lists match (and
+%   either |-1| or |1| if they don't) we can use \cs{if:w} here which is faster
+%   than using \cs{if_int_compare:w}.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \str_if_eq:nn #1#2 { p , T , F , TF }
   {
