Add note that xparse-generic.tex is no longer generated

--- a/l3packages/xparse/xparse-generic.tex
+++ b/l3packages/xparse/xparse-generic.tex
@@ -1,11 +1,9 @@
 %%
-%% This is file `xparse-generic.tex',
-%% generated with the docstrip utility.
+%% This is file `xparse-generic.tex', generated from
+%% xparse.dtx  (with options: `core', on 2021-01-20)
+%% then adapted and frozen for compatibility.  Development of
+%% xparse.dtx will continue in the LaTeX2e kernel as ltcmd.dtx.
 %%
-%% The original source files were:
-%%
-%% xparse.dtx  (with options: `core')
-%% 
 %% Copyright (C) 2009-2021 The LaTeX Project
 %% 
 %% It may be distributed and/or modified under the conditions of
