Normalise catcodes in color models (fixes #962)

--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -1339,7 +1339,7 @@
 % \begin{macro}{\@@_set:nnn}
 % \begin{macro}{\@@_set:nn}
 % \begin{macro}{\@@_set:nnw}
-% \begin{macro}{\color_set:nnn}
+% \begin{macro}{\color_set:nnn, \@@_set_aux:nnn}
 % \begin{macro}{\@@_set_colon:nnw}
 % \begin{macro}{\@@_set_loop:nw}
 % \begin{macro}{\color_set_eq:nn}
@@ -1403,15 +1403,20 @@
           }
       }
   }
-\cs_new_protected:Npx \color_set:nnn #1#2#3
+\cs_new_protected:Npn \color_set:nnn #1#2#3
   {
-    \exp_not:N \str_if_eq:nnF {#1} { . }
+    \str_if_eq:nnF {#1} { . }
       {
         \tl_clear_new:c { l_@@_named_ #1 _tl }
         \prop_clear_new:c { l_@@_named_ #1 _prop }
-        \exp_not:N \@@_set_colon:nnw {#1} {#3}
-          #2 \c_colon_str \c_colon_str \exp_not:N \s_@@_stop
+        \exp_args:Ne \@@_set_aux:nnn { \tl_to_str:n {#2} }
+          {#1} {#3}
       }
+  }
+\cs_new_protected:Npx \@@_set_aux:nnn #1#2#3
+  {
+    \exp_not:N \@@_set_colon:nnw {#2} {#3}
+      #1 \c_colon_str \c_colon_str \exp_not:N \s_@@_stop
   }
 \use:x
   {
