--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -416,10 +416,13 @@
 %   as taken from \pkg{hypdvips}.
 %
 %   Getting the outer dimensions of the text area may be better using a two-pass
-%   approach and |\tex_savepos:D|. That plus format mode are still to re-examine.
+%   approach and |\tex_savepos:D|. That plus generic mode are still to re-examine.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_link_begin_goto:nnw #1#2
-  { \@@_backend_link_begin:nw { #1 /Subtype /Link /A << /S /GoTo /D ( #2 ) >> } }
+  {
+    \@@_backend_link_begin:nw
+      { #1 /Subtype /Link /Action << /S /GoTo /D ( #2 ) >> }
+  }
 \cs_new_protected:Npn \@@_backend_link_begin_user:nnw #1#2
   { \@@_backend_link_begin:nw {#1#2} }
 \cs_new_protected:Npn \@@_backend_link_begin:nw #1
