Use /Action not /A for GoTo links in dvips (fixes #957)

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -402,6 +402,10 @@
 %   grab the link content as a box which can then unbox: this allows the same
 %   interface as for \pdfTeX{}.
 %
+%   Notice that the link setup here uses |/Action| not |/A|. That is because
+%   Distiller \emph{requires} this trigger word, rather than a \enquote{raw}
+%   PDF dictionary key (Ghostscript can handle either form).
+%
 %   Taking the idea of |evenboxes| from \pkg{hypdvips}, we implement a minimum
 %   box height and depth for link placement. This means that \enquote{underlining}
 %   with a hyperlink will generally give an even appearance. However, to ensure
