--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -435,6 +435,11 @@
     \bool_if:NF \g_@@_backend_link_bool
       { \@@_backend_link_begin_aux:nw {#1} }
   }
+%    \end{macrocode}
+%   The definition of |pdf.link.dict| here is needed as there is code in the
+%   PostScript headers for breaking links, and that can only work with this
+%   available.
+%    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_link_begin_aux:nw #1
   {
     \bool_gset_true:N \g_@@_backend_link_bool
