Note about Distiller and transparency

--- a/l3experimental/l3opacity/l3opacity.dtx
+++ b/l3experimental/l3opacity/l3opacity.dtx
@@ -61,6 +61,11 @@
 % (\pdfTeX{}, \LuaTeX{}) or with recent versions of \texttt{(x)dvipdfmx}:
 % these backends do offer the necessary support.
 %
+% For users of PostScript-based routes, note that there are security
+% restrictions which can prevent opacity being available in output. In
+% particular, using Adobe Distiller, you will need to enable transparency
+% in the (text-based) configuration: this is not selectable from the GUI.
+%
 % \begin{function}[added = 2021-07-01]{\opacity_select:n}
 %   \begin{syntax}
 %     \cs{opacity_select:n} \Arg{expression}
