--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -342,7 +342,7 @@
 %
 % \begin{function}[TF, added = 2017-10-08]{\str_if_in:nn}
 %   \begin{syntax}
-%     \cs{str_if_in:nnTF} \meta{tl_1} \Arg{tl_2} \Arg{true code} \Arg{false code}
+%     \cs{str_if_in:nnTF} \Arg{tl_1} \Arg{tl_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Converts both \meta{token lists} to \meta{strings} and
 %   tests whether \meta{string_2} is found inside \meta{string_1}.
