Update docs for l3draw

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -363,21 +363,10 @@
 % \subsection{Points}
 %
 % Functions supporting the calculation of points (co-ordinates) are expandable
-% and may be used outside of the drawing environment. When used in this
-% way, they all yield a co-ordinate tuple, for example
-% \begin{verbatim}
-%   \tl_set:Nx \l_tmpa_tl { \draw_point:nn { 1 } { 2 } }
-%   \tl_show:N \l_tmpa_tl
-% \end{verbatim}
-% gives
-% \begin{verbatim}
-%   > \l_tmpa_tl=1pt,2pt.
-%   <recently read> }
-% \end{verbatim}
-%
-% This output form is then suitable as \emph{input} for subsequent point
-% calculations, \emph{i.e.}~where a \meta{point} is required it may be
-% given as a tuple. This \emph{may} include units and surrounding
+% and may be used outside of the drawing environment. The outputs of all of the
+% point functions are tuples. This output form is then suitable as \emph{input}
+% for subsequent point calculations, \emph{i.e.}~where a \meta{point} is required
+% it may be given as a tuple. This \emph{may} include units and surrounding
 % parentheses, for example
 % \begin{verbatim}
 %   1,2
