--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1193,6 +1193,8 @@
 %    \end{macrocode}
 % Newer cross-engine primitives.
 %    \begin{macrocode}
+  \@@_primitive:NN \partokencontext       \tex_partokencontext:D
+  \@@_primitive:NN \partokenname          \tex_partokenname:D
   \@@_primitive:NN \tracingstacklevels    \tex_tracingstacklevels:D
 %    \end{macrocode}
 % End of the \enquote{just the names} part of the source.
