--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -328,6 +328,14 @@ following variable types:
   \item[\texttt{regex}] Regular expression.
 \end{description}
 
+\subsection{Scratch variables}
+
+Modules focussed on variable usage typically provide four scratch variables,
+two local and two global, with names of the form
+\cs{\meta{scope}_tmp(a|b)_\meta{type}}. These are never used by the core code.
+The nature of \TeX{} grouping means that as with any other scratch variable,
+these should only be set and used with no intervening third-party code.
+
 \subsection{Terminological inexactitude}
 
 A word of warning. In this document, and others referring to the \pkg{expl3}
