--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -332,9 +332,10 @@ following variable types:
 
 Modules focussed on variable usage typically provide four scratch variables,
 two local and two global, with names of the form
-\cs{\meta{scope}_tmp(a|b)_\meta{type}}. These are never used by the core code.
-The nature of \TeX{} grouping means that as with any other scratch variable,
-these should only be set and used with no intervening third-party code.
+\cs{\meta{scope}_tmpa_\meta{type}}/\cs{\meta{scope}_tmpb_\meta{type}}. These
+are never used by the core code. The nature of \TeX{} grouping means that as
+with any other scratch variable, these should only be set and used with no
+intervening third-party code.
 
 \subsection{Terminological inexactitude}
 
