--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1249,6 +1249,24 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Copying a command and its internal structure}
+%
+% The apparatus for copying commands is almost entirely in |ltcmd.dtx|,
+% preloaded in the \LaTeXe{} kernel.  The missing parts, regarding
+% copying the deprecated argument types |G|, |l| and |u| boil down to
+% copying the expandable grabber for |u|.
+%
+% \begin{macro}{\@@_copy_grabber_u:w}
+%   An expandable |u|-type uses a dedicated grabber just like a
+%   |D|-type, except that both its delimiter tokens are omitted, so to
+%   copy that we just copy a |D|-type and leave the last two arguments
+%   empty:
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_copy_grabber_u:w #1 #2 #3
+  { \@@_copy_grabber_D:w {#1} {#2} {#3} { } { } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Grabbing arguments}
 %
 % \begin{macro}{\@@_grab_G:w}
