Shorten some expandable errors to avoid LuaTeX-specific tests later on

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1354,7 +1354,7 @@
 % Two messages for the low level parsing system.
 %    \begin{macrocode}
 \__kernel_msg_new:nnn { keyval } { misplaced-equals-sign }
-  { Misplaced~equals~sign~in~key-value~input~\msg_line_context: }
+  { Misplaced~'='~in~key-value~input~\msg_line_context: }
 \__kernel_msg_new:nnn { keyval } { blank-key-name }
   { Blank~key~name~in~key-value~input~\msg_line_context: }
 %    \end{macrocode}
