--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2163,46 +2163,79 @@
 %
 % \subsection{Expandable errors}
 %
-% \begin{macro}{\@@_expandable_error:n}
-% \begin{macro}{\@@_expandable_error:w}
+% \begin{macro}{\@@_expandable_error:nn}
 %   In expansion only context, we cannot use the normal means of
-%   reporting errors. Instead, we feed \TeX{} an undefined control
-%   sequence, \cs[module = {}]{LaTeX3 error:}. It is thus interrupted, and shows
+%   reporting errors. Instead, we rely on a low-level \TeX{} error
+%   caused by expanding a macro \cs{???} with parameter text ``|?|''
+%   (this could be any token) which we used followed by something else
+%   (here, a space).  This shows
 %   the context, which thanks to the odd-looking \cs{use:n} is
 %   \begin{verbatim}
-%     <argument> \LaTeX3 error:
-%                               The error message.
+%     <argument> \???
+%                     ! mypkg Error: The error message.
 %   \end{verbatim}
 %   In other words, \TeX{} is processing the argument of \cs{use:n},
-%   which is \cs[module = {}]{LaTeX3 error:} \meta{error message}.
-%   Then \cs{@@_expandable_error:w} cleans up. In fact, there
-%   is an extra subtlety: if the user inserts tokens for error recovery,
-%   they should be kept. Thus we also use an odd space character
-%   (with category code $7$) and keep tokens until that space character,
-%   dropping everything else until \cs{s_@@_stop}. The \cs{exp_end:} prevents
-%   losing braces around the user-inserted text if any, and stops the
-%   expansion of \cs{exp:w}.  The group is used to prevent
-%   |\LaTeX3~error:| from being globally equal to \cs{scan_stop:}.
+%   which is \cs{???} \meta{space} |!| \meta{error type} |:| \meta{error message}.
 %    \begin{macrocode}
-\group_begin:
-\cs_set_protected:Npn \@@_tmp:w #1#2
+\cs_set_protected:Npn \@@_tmp:w #1
   {
-    \cs_new:Npn \@@_expandable_error:n ##1
+    \cs_new:Npn #1 ? { }
+    \cs_new:Npn \@@_expandable_error:nn ##1##2
       {
-        \exp:w
         \exp_after:wN \exp_after:wN
-        \exp_after:wN \@@_expandable_error:w
-        \exp_after:wN \exp_after:wN
-        \exp_after:wN \exp_end:
-        \use:n { #1 #2 ##1 } #2
+        \exp_after:wN \@@_use_none_delimit_by_s_stop:w
+        \use:n { #1 ~ ! ~ ##2 : ~ ##1 } \s_@@_stop
       }
-    \cs_new:Npn \@@_expandable_error:w ##1 #2 ##2 #2 {##1}
   }
-\exp_args:Ncx \@@_tmp:w { LaTeX3~error: }
-  { \char_generate:nn { `\  } { 7 } }
-\group_end:
+\exp_args:Nc \@@_tmp:w { ??? }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{macro}[EXP]
+%   {
+%     \msg_expandable_error:nnnnnn ,
+%     \msg_expandable_error:nnnnn  ,
+%     \msg_expandable_error:nnnn   ,
+%     \msg_expandable_error:nnn    ,
+%     \msg_expandable_error:nn     ,
+%     \msg_expandable_error:nnffff ,
+%     \msg_expandable_error:nnfff  ,
+%     \msg_expandable_error:nnff   ,
+%     \msg_expandable_error:nnf
+%   }
+%   The command built from the csname
+%   \cs{c_@@_text_prefix_tl} |#1 / #2|
+%   takes four arguments and builds the error text, which is fed to
+%   \cs{@@_expandable_error:n} with appropriate expansion: just as for
+%   usual messages the arguments are first turned to strings, then the
+%   message is fully expanded.  The module name also has to be determined.
+%    \begin{macrocode}
+\cs_new:Npn \msg_expandable_error:nnnnnn #1#2#3#4#5#6
+  {
+    \exp_args:Nee \@@_expandable_error:nn
+      {
+        \exp_args:Nc \exp_args:Noooo
+          { \c_@@_text_prefix_tl #1 / #2 }
+          { \tl_to_str:n {#3} }
+          { \tl_to_str:n {#4} }
+          { \tl_to_str:n {#5} }
+          { \tl_to_str:n {#6} }
+      }
+      { \msg_error_text:n {#1} }
+  }
+\cs_new:Npn \msg_expandable_error:nnnnn #1#2#3#4#5
+  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} {#4} {#5} { } }
+\cs_new:Npn \msg_expandable_error:nnnn #1#2#3#4
+  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} {#4} { } { } }
+\cs_new:Npn \msg_expandable_error:nnn #1#2#3
+  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} { } { } { } }
+\cs_new:Npn \msg_expandable_error:nn #1#2
+  { \msg_expandable_error:nnnnnn {#1} {#2} { } { } { } { } }
+\cs_generate_variant:Nn \msg_expandable_error:nnnnnn { nnffff }
+\cs_generate_variant:Nn \msg_expandable_error:nnnnn  { nnfff }
+\cs_generate_variant:Nn \msg_expandable_error:nnnn   { nnff }
+\cs_generate_variant:Nn \msg_expandable_error:nnn    { nnf }
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}
@@ -2217,26 +2250,12 @@
 %     \__kernel_msg_expandable_error:nnff,
 %     \__kernel_msg_expandable_error:nnf,
 %   }
-%   The command built from the csname
-%   \cs{c_@@_text_prefix_tl} |LaTeX / #1 / #2|
-%   takes four arguments and builds the error text, which is fed to
-%   \cs{@@_expandable_error:n} with appropriate expansion: just as for
-%   usual messages the arguments are first turned to strings, then the
-%   message is fully expanded.
+%   This simply calls \cs{msg_expandable_error:nnnnnn} with the
+%   appropriate module name.
 %    \begin{macrocode}
 \exp_args_generate:n { oooo }
-\cs_new:Npn \__kernel_msg_expandable_error:nnnnnn #1#2#3#4#5#6
-  {
-    \exp_args:Ne \@@_expandable_error:n
-      {
-        \exp_args:Nc \exp_args:Noooo
-          { \c_@@_text_prefix_tl LaTeX / #1 / #2 }
-          { \tl_to_str:n {#3} }
-          { \tl_to_str:n {#4} }
-          { \tl_to_str:n {#5} }
-          { \tl_to_str:n {#6} }
-      }
-  }
+\cs_new:Npn \__kernel_msg_expandable_error:nnnnnn #1#2
+  { \msg_expandable_error:nnnnnn { LaTeX } { #1 / #2 } }
 \cs_new:Npn \__kernel_msg_expandable_error:nnnnn #1#2#3#4#5
   {
     \__kernel_msg_expandable_error:nnnnnn
@@ -2262,56 +2281,6 @@
 \cs_generate_variant:Nn \__kernel_msg_expandable_error:nnnn { nnff }
 \cs_generate_variant:Nn \__kernel_msg_expandable_error:nnn { nnf }
 %    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}[EXP]
-%   {
-%     \msg_expandable_error:nnnnnn ,
-%     \msg_expandable_error:nnnnn  ,
-%     \msg_expandable_error:nnnn   ,
-%     \msg_expandable_error:nnn    ,
-%     \msg_expandable_error:nn     ,
-%     \msg_expandable_error:nnffff ,
-%     \msg_expandable_error:nnfff  ,
-%     \msg_expandable_error:nnff   ,
-%     \msg_expandable_error:nnf
-%   }
-% \begin{macro}{\@@_expandable_error_module:nn}
-%   Pass to an auxiliary the message to display and the module name
-%    \begin{macrocode}
-\cs_new:Npn \msg_expandable_error:nnnnnn #1#2#3#4#5#6
-  {
-    \exp_args:Ne \@@_expandable_error_module:nn
-      {
-        \exp_args:Nc \exp_args:Noooo
-          { \c_@@_text_prefix_tl #1 / #2 }
-          { \tl_to_str:n {#3} }
-          { \tl_to_str:n {#4} }
-          { \tl_to_str:n {#5} }
-          { \tl_to_str:n {#6} }
-      }
-      {#1}
-  }
-\cs_new:Npn \msg_expandable_error:nnnnn #1#2#3#4#5
-  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} {#4} {#5} { } }
-\cs_new:Npn \msg_expandable_error:nnnn #1#2#3#4
-  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} {#4} { } { } }
-\cs_new:Npn \msg_expandable_error:nnn #1#2#3
-  { \msg_expandable_error:nnnnnn {#1} {#2} {#3} { } { } { } }
-\cs_new:Npn \msg_expandable_error:nn #1#2
-  { \msg_expandable_error:nnnnnn {#1} {#2} { } { } { } { } }
-\cs_generate_variant:Nn \msg_expandable_error:nnnnnn { nnffff }
-\cs_generate_variant:Nn \msg_expandable_error:nnnnn  { nnfff }
-\cs_generate_variant:Nn \msg_expandable_error:nnnn   { nnff }
-\cs_generate_variant:Nn \msg_expandable_error:nnn    { nnf }
-\cs_new:Npn \@@_expandable_error_module:nn #1#2
-  {
-    \exp_after:wN \exp_after:wN
-    \exp_after:wN \@@_use_none_delimit_by_s_stop:w
-    \use:n { \::error ! ~ #2 : ~ #1 } \s_@@_stop
-  }
-%    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
