--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -582,8 +582,7 @@
 %
 % \subsection{Expandable warnings}
 %
-% We already know how to get expandable errors (see
-% \cs{__msg_expandable_error:n}).  It turns out that \eTeX{}'s
+% We already know how to get expandable errors.  It turns out that \eTeX{}'s
 % \cs{tracingnesting} can be abused to produce custom warnings
 % expandably.
 %
@@ -716,7 +715,7 @@
 %    \begin{macrocode}
 \sys_if_engine_luatex:T
   {
-    \cs_gset:Npx \__msg_expandable_error:n #1
+    \cs_gset:Npx \__msg_expandable_error:nn #1#2
       {
         \exp_not:N \tex_directlua:D
           \exp_not:N \use:n
@@ -725,13 +724,13 @@
                 tex.error
                   ( "
                     \exp_not:N \tex_luaescapestring:D
-                      { \exp_not:N \tl_to_str:n { LaTeX3~error:~#1} }
+                      { \exp_not:N \tl_to_str:n { #2:~#1} }
                   " )
                 \prg_replicate:nn { 50 } { ~ }
               }
             }
       }
-    \cs_undefine:N \__msg_expandable_error:w
+    % \cs_undefine:c { ??? }
   }
 %    \end{macrocode}
 %
